--- a/django/website/main/templates/base.html
+++ b/django/website/main/templates/base.html
@@ -72,10 +72,12 @@
     </footer>
     </div> {# div.body #}
     {% block post_footer %}{% endblock %}
-    {% if deploy_env == "staging" or deploy_env == "production" %}
-    <script data-main="{{ STATIC_URL }}dist/logframe.min.js" src="{{ STATIC_URL }}js/lib/require.js"></script>
-    {% else %}
-    <script data-main="{{ STATIC_URL }}js/main.js" src="{{ STATIC_URL }}js/lib/require.js"></script>
-    {% endif %}
+    {% block post_script %}
+        {% if deploy_env == "staging" or deploy_env == "production" %}
+        <script data-main="{{ STATIC_URL }}dist/logframe.min.js" src="{{ STATIC_URL }}js/lib/require.js"></script>
+        {% else %}
+        <script data-main="{{ STATIC_URL }}js/main.js" src="{{ STATIC_URL }}js/lib/require.js"></script>
+        {% endif %}
+    {% endblock %}
 </body>
 </html>
