Pass Aptivate.data.results into Elm app
Set up a full app with a results port to init from
the initvalue. And pass in the value from the calling
javascript.

This kinda works if I load the page I get "nothing here" but
if I then run
    app.ports.results.send(Aptivate.data.results)

by hand at the console, i get the result.

Surprising, race conditions?
Maybe I should be pasing these into the embed call like this:
https://github.com/evancz/elm-html-and-js

--- a/django/website/dashboard/templates/dashboard/dashboard_base_elm.html
+++ b/django/website/dashboard/templates/dashboard/dashboard_base_elm.html
@@ -5,7 +5,7 @@
 {% load jstemplate %}
 
 {% block content %}
-<div id="elm-test">placeholder</div>
+<div id="elm-test"></div>
 {% endblock content %}
 
 {% block post_footer %}
@@ -18,9 +18,10 @@
 
 <!-- Empty out the footer srip  -->
 {% block post_script %}
-<script src="/static/elm/test.js" ></script>
+<script src="/static/elm/dashboard.js" ></script>
 <script>
     var node = document.getElementById('elm-test');
-    var app = Elm.Main.embed(node)
+    var app = Elm.Dashboard.embed(node)
+    app.ports.results.send(Aptivate.data.results)
 </script>
 {% endblock %}
