Switch to programWithFlags for init
So the correct way to do that initialization is to pass the init data in
the embed call as a flag, which means we use Html.programWithFlags
instead of .program.  This means we're initialized from the start, so
we're never waiting for the data and the model gets simpler becasue we
can lose the maybe.

--- a/django/website/dashboard/templates/dashboard/dashboard_base_elm.html
+++ b/django/website/dashboard/templates/dashboard/dashboard_base_elm.html
@@ -20,8 +20,7 @@
 {% block post_script %}
 <script src="/static/elm/dashboard.js" ></script>
 <script>
-    var node = document.getElementById('elm-test');
-    var app = Elm.Dashboard.embed(node)
-    app.ports.results.send(Aptivate.data.results)
+  var node = document.getElementById('elm-test');
+  var app = Elm.Dashboard.embed(node, Aptivate.data.results )
 </script>
 {% endblock %}
