Copy html from backbone app
Just wrote a bunch of html to copy the layout of the old backbone
version to see what kind of mess we get into. Probably want to
separate the view sutff out into its own file.

--- a/django/website/dashboard/templates/dashboard/dashboard_base_elm.html
+++ b/django/website/dashboard/templates/dashboard/dashboard_base_elm.html
@@ -5,7 +5,7 @@
 {% load jstemplate %}
 
 {% block content %}
-<div id="elm-test"></div>
+<div id="current-page"></div>
 {% endblock content %}
 
 {% block post_footer %}
@@ -20,7 +20,7 @@
 {% block post_script %}
 <script src="/static/elm/dashboard.js" ></script>
 <script>
-  var node = document.getElementById('elm-test');
+  var node = document.getElementById('current-page');
   var app = Elm.Dashboard.embed(node, Aptivate.data.results )
 </script>
 {% endblock %}
