Get the logframe id, needed for API endpoing url
Pass all the Aptivate.data as flags to initWithFlags
Save the logframe id in the Result objects, from where
we can use it (later) to generate the API url.

--- a/django/website/dashboard/templates/dashboard/dashboard_base_elm.html
+++ b/django/website/dashboard/templates/dashboard/dashboard_base_elm.html
@@ -21,6 +21,6 @@
 <script src="/static/elm/dashboard.js" ></script>
 <script>
   var node = document.getElementById('current-page');
-  var app = Elm.Dashboard.embed(node, Aptivate.data.results )
+  var app = Elm.Dashboard.embed(node, Aptivate.data)
 </script>
 {% endblock %}
